# photonGroundTruthBench

./: .gitignore  AGENTS.md  README.md  photon-ground-truth-bench.code-workspace  pyproject.toml  requirements-dev.txt  robot.py
config/: __init__.py  bench_config.py  servo_calibration_map.py
core/: __init__.py  subsystem.py
hardware/: __init__.py  camera_positioner.py  ground_truth_sensors.py  mpu6050.py  vision_processor.py
modes/: __init__.py  calibrate_servos.py  dynamic_sweep_test.py  home_servos.py  manual_control.py  static_pose_test.py  zero_imu.py
scripts/: __init__.py  check_docstrings.py  download_calibration.py
tests/: __init__.py  conftest.py  test_calibration_pipeline.py  test_config.py  test_imu_filter.py  test_measurement.py  test_opmodes_sim.py
utilities/: __init__.py  comparison.py  ground_truth.py  imu_filter.py  math_utils.py  measurement.py
